# cnn-baselines

./: .gitignore  README.md
ALEX_NET/: alex_net.py  data.py  model.py  train.py
MNIST_CNN/: MnistCNN.py  data.py  mnist_cnn_better_spatial_v1.py  mnist_cnn_better_spatial_v2.py  model.py  pyproject.toml  requirements.txt  train.py
