[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnn-baselines"
version = "0.1.0"
description = "PyTorch computer vision baselines for AlexNet on CIFAR-10 and CNN models on MNIST."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kamal Mahmud" }
]
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]